--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Alex Khant</title>
   <link href="https://fonts.googleapis.com/css?family=Averia+Serif+Libre%7cChelsea+Market" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
-   <link rel="stylesheet" href="css/style.css">
+   <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <!-- Body -->
