Added figure and figcaption

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
   <meta name=viewport content="width=device-width, initial-scale=1">
   <title>Alex Khant</title>
   <link href="https://fonts.googleapis.com/css?family=Averia+Serif+Libre%7cChelsea+Market" rel="stylesheet">
@@ -34,7 +35,7 @@ all my skills to use!</span>
 
     <div class="skills">
         <h2 id="skills" class="skills-heading">Skills</h2>
-        <p>Check out the skills I acquired during my study at Treehouse.</p>
+        <p>Check out the skills I learned during my study at Treehouse.</p>
         <ul class="skills-list">
             <li>HTML</li>
             <li>CSS</li>
@@ -50,37 +51,55 @@ all my skills to use!</span>
 
     <div class="row">
       <div id="portfolio-1" class="col">
-        <img src="images/portfolio-1.png" alt="portfolio-1">
+		<figure>
+			<img src="images/portfolio-1.png" alt="portfolio-1">
+				<figcaption><h3>Project-1</h3></figcaption>
+		</figure>
         <h2>Marketing Page</h2>
         <p>This project shows the front page of a marketing website meant for a specific business I'm interested in.</p>
       </div> <!-- End of portfolio-1 -->
 
       <div id="portfolio-2" class="col">
-        <img src="images/portfolio-2.png" alt="portfolio-2">
+		<figure>
+			<img src="images/portfolio-2.png" alt="portfolio-2">
+			<figcaption><h3>Project-2</h3></figcaption>
+		</figure>
         <h2>Search Page</h2>
         <p>This project searches through a specific database to find information that the user is trying to look up.</p>
       </div> <!-- End of portfolio-2 -->
 
       <div id="portfolio-3" class="col">
-        <img src="images/portfolio-3.png" alt="portfolio-3">
+		<figure>
+			<img src="images/portfolio-3.png" alt="portfolio-3">
+			<figcaption><h3>Project-3</h3></figcaption>
+		</figure>
         <h2>Travel App</h2>
         <p>This project compares travel times based on different transportation methods and tells you the best one.</p>
       </div><!-- End of portfolio-3 -->
 
       <div id="portfolio-4" class="col">
-        <img src="images/portfolio-4.png" alt="portfolio-4">
+		<figure>
+			<img src="images/portfolio-4.png" alt="portfolio-4">
+			<figcaption><h3>Project-4</h3></figcaption>
+		</figure>
         <h2>Map of Favorite Spots</h2>
         <p>This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
       </div> <!-- End of portfolio-4 -->
 
       <div id="portfolio-5" class="col">
-        <img src="images/portfolio-5.png" alt="portfolio-5">
+		<figure>
+			<img src="images/portfolio-5.png" alt="portfolio-5">
+			<figcaption><h3>Project-5</h3></figcaption>
+		</figure>
         <h2>Photo Gallery</h2>
         <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
       </div> <!-- End of portfolio-5 -->
 
       <div id="portfolio-6" class="col">
-        <img src="images/portfolio-6.png" alt="portfolio-6">
+		<figure>
+			<img src="images/portfolio-6.png" alt="portfolio-6">
+			<figcaption><h3>Project-6</h3></figcaption>
+		</figure>
         <h2>Calculator</h2>
         <p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
       </div> <!-- End of portfolio-6 -->
