--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name=viewport content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Alex Khant</title>
   <link href="https://fonts.googleapis.com/css?family=Averia+Serif+Libre%7cChelsea+Market" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
