--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name=viewport content="width=device-width, initial-scale=1">
-  <title>Alex Hunt</title>
+  <title>Alex Khant</title>
   <link href="https://fonts.googleapis.com/css?family=Averia+Serif+Libre%7cChelsea+Market" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
    <link rel="stylesheet" href="css/styles.css">
@@ -15,7 +15,7 @@
 <div class="main-container"> <!-- .main-container to sex max-width -->
 
   <header>
-        <h1 class="header-name">Alex Hunt</h1>
+        <h1 class="header-name">Alex Khant</h1>
         <nav class="main-header">
         <ul class="main-nav">
           <li><a href="index.html">home</a></li>
@@ -122,7 +122,7 @@ all my skills to use!</span>
 
   <footer class="main-footer">
     <div class="footer-wrapper">
-      <span class="footer-name">Alex Hunt</span>
+      <span class="footer-name">Alex Khant</span>
       <a href="#" class="back2top">back to top</a>
       <nav class="footer-nav">
         <ul>
